refactor: change name

--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "@byteagent/monorepo",
+  "name": "@memohome/monorepo",
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "pnpm --parallel --filter @byteagent/* dev",
-    "build": "pnpm --parallel --filter @byteagent/* build",
-    "start": "pnpm --parallel --filter @byteagent/* start",
-    "api:dev": "pnpm --filter @byteagent/api dev",
-    "api:build": "pnpm --filter @byteagent/api build",
-    "api:start": "pnpm --filter @byteagent/api start",
-    "web:dev": "pnpm --filter @byteagent/web dev",
-    "web:build": "pnpm --filter @byteagent/web build",
-    "web:start": "pnpm --filter @byteagent/web start",
-    "device-api:dev": "pnpm --filter @byteagent/device-api dev",
-    "device-api:build": "pnpm --filter @byteagent/device-api build",
-    "device-api:start": "pnpm --filter @byteagent/device-api start",
-    "db:push": "pnpm --filter @byteagent/db push",
-    "db:migrate": "pnpm --filter @byteagent/db migrate",
-    "db:generate": "pnpm --filter @byteagent/db generate",
-    "db:studio": "pnpm --filter @byteagent/db studio",
+    "dev": "pnpm --parallel --filter @memohome/* dev",
+    "build": "pnpm --parallel --filter @memohome/* build",
+    "start": "pnpm --parallel --filter @memohome/* start",
+    "api:dev": "pnpm --filter @memohome/api dev",
+    "api:build": "pnpm --filter @memohome/api build",
+    "api:start": "pnpm --filter @memohome/api start",
+    "web:dev": "pnpm --filter @memohome/web dev",
+    "web:build": "pnpm --filter @memohome/web build",
+    "web:start": "pnpm --filter @memohome/web start",
+    "device-api:dev": "pnpm --filter @memohome/device-api dev",
+    "device-api:build": "pnpm --filter @memohome/device-api build",
+    "device-api:start": "pnpm --filter @memohome/device-api start",
+    "db:push": "pnpm --filter @memohome/db push",
+    "db:migrate": "pnpm --filter @memohome/db migrate",
+    "db:generate": "pnpm --filter @memohome/db generate",
+    "db:studio": "pnpm --filter @memohome/db studio",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest"
