--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@byteagent/memory",
+  "name": "@memohome/memory",
   "version": "1.0.0",
   "description": "",
   "exports": {
@@ -14,7 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.27.0",
   "dependencies": {
-    "@byteagent/db": "workspace:*",
+    "@memohome/db": "workspace:*",
     "drizzle-orm": "^0.45.1",
     "xsai": "^0.4.1"
   }
