--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@byteagent/agent",
+  "name": "@memohome/agent",
   "version": "1.0.0",
   "description": "Agent package for the phonetutor monorepo",
   "scripts": {
